--- a/data-science/_quarto.yml
+++ b/data-science/_quarto.yml
@@ -1,10 +1,11 @@
 project:
   type: book
+  output-dir: docs
 
 book:
   title: "data-science"
   author: "Omar García Flores"
-  date: "6/6/2025"
+  date: "2025-06-06"
   chapters:
     - index.qmd
     - intro.qmd
@@ -15,12 +16,8 @@ bibliography: references.bib
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: cosmo
   pdf:
     documentclass: scrreprt
-
-output-dir: docs
 
 
